# cognicore-my-openenv

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  Makefile  Procfile  README.md  agent_1783320892_ef119109.passport  analyze_failures.py  analyze_verdicts.py  analyze_verdicts_multihop.py  benchmark.py  check.py  check_db.py  cognicore_memory.db  cognicore_trajectories.db  demo_github_live.py  generate_dummy.py  generate_fake_results.py  generate_reports.py  mcp_launch_demo.py  pyproject.toml  requirements.txt  run_production_audit.py  run_reranking_benchmark.py  test_agent.py  test_gemini.py  test_gemini_models.py  test_gemini_sdk.py  test_genai.py  test_groq.py  test_groq_valid.py  test_multihop_beam.py  test_or.py  test_or_free.py  test_quota.py  test_quota_15.py  test_quota_latest.py  test_quota_lite.py  trajectories_export.jsonl
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  healthbot.yml  securitybot.yml
benchmark_output/: benchmark_report.md  benchmark_results.csv
benchmarks/: memory_strength_bench.py
claude-plugin/: .mcp.json  README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/agents/: memory-assistant.md
claude-plugin/commands/: forget.md  memory-list.md  recall.md  remember.md
cognicore/: __init__.py  advanced_memory.py  cli.py  debugger.py  experiment.py  multi_memory.py  runtime.py  safety_layer.py  smart_agents.py  studio.py  webhooks.py
cognicore/agents/: company_models.py
cognicore/benchmarks/: __init__.py  regression.py  suite.py
cognicore/civilization/: __init__.py
cognicore/conscience/: __init__.py
cognicore/core/: api.py  base_env.py  cognitive_boost.py
cognicore/dna/: __init__.py
cognicore/dream/: __init__.py
cognicore/envs/: npc_simulation.py
cognicore/extension/: __init__.py  __main__.py  code_setup.py  remote.py  server.py
cognicore/immune/: __init__.py  antibodies.py  detector.py  memory.py  quarantine.py  reporter.py  rl_defender.py  shield.py
cognicore/integrations/: __init__.py  ci_fixer.py  crewai.py  github_issues.py  huggingface.py  langchain.py  linear.py  openai_agents.py  pr_reviewer.py  scheduler.py  setup_wizard.py  slack.py  task_queue.py  webhook_server.py
cognicore/mcp/: __init__.py  server.py
cognicore/memory/: __init__.py  async_wrapper.py  base.py  chroma_backend.py  debugger.py  decompose.py  embedding.py  embedding_backend.py  evaluator.py  events.py  extractor.py  graph_backend.py  hybrid_backend.py  lifecycle.py  multihop_backend.py  planner.py  rate_limiter.py  scoped.py  sleep.py  sqlite_backend.py  temporal.py  tfidf_backend.py  tfidf_embedder.py  utility.py  vector_memory.py
cognicore/middleware/: memory.py  propose_revise.py  reflection.py  rewards.py
cognicore/nexus/: __init__.py  ablation.py  agent.py  agents.py  autonomous.py  bench_final.py  coordinator.py  export_trajectories.py  live_instrument.py  live_server.py  live_ui.html  llm_agents.py  llm_provider.py  multi_llm.py  quick_stress.py  rl_policy.py  run.py  stress_test.py  swe_runner.py  token_tracker.py  trajectory_store.py
cognicore/oracle/: __init__.py
cognicore/passport/: __init__.py
cognicore/realbench/: coding_bench.py
cognicore/reflection/: reflection.py
cognicore/replay/: __init__.py  brancher.py  comparator.py  exporter.py  recorder.py  replayer.py  rl_navigator.py  session.py  store.py  visualizer.py
cognicore/research/: benchmark.py  event_logger.py  llm_client.py  patch_intelligence.py  persistent_store.py  run_swebench.py  sandbox.py  swebench.py  swebench_v2.py
cognicore/rl/: dqn.py  unified_trainer.py
cognicore/timetravel/: __init__.py
cognicore/ui/: __init__.py  server.py
cognicore/utils/: sqlite.py
cognicore_bench/: runner.py
cognicore_bench/agents/: arms.py
cognicore_bench/harness/: docker_linter.py  env.py  python_sandbox.py
cognicore_bench/metrics/: analyzer.py  tracker.py  trajectory_analyzer.py
cognicore_bench/results/: results.jsonl
cognicore_bench/tasks/: generators.py
cognicore_benchmarks/: __init__.py  analyze_failures.py  generate_sota_reports.py  lifecycle_benchmark.py  local_gap_analysis.py  run_controlled_benchmark.py  run_temporal_validation.py
cognicore_benchmarks/common/: __init__.py  base_evaluator.py  base_runner.py  llm_client.py
cognicore_benchmarks/longmemeval/: __init__.py  evaluate.py  evaluator.py  metrics.py  runner.py
cognicore_data/chroma_db/: chroma.sqlite3
demo/: 01_no_memory.py  02_with_memory.py  03_persist_write.py  04_persist_read.py  05_semantic_search.py  06_reflection.py  07_immune.py  08_passport_agent_a.py  09_passport_agent_b.py  10_longmemeval.py  nexus_demo.html
docs/: api_reference.md  claude-desktop-demo.md  claude-desktop-extension.md  claude-extension-audit.md  mcp_validation_plan.md
examples/: README.md  coderepair_llm.py  crewai_advanced_demo.py  crewai_quickstart.py  gemini_agent.py  langchain_quickstart.py  memory_behavior_demo.py
experiments/: predictions_mini.jsonl
extension/: .mcpbignore  README.md  pyproject.toml
paper/: nexus_paper.tex
scratch/: ablation_results.md  ablation_study.py  eval_multihop.py  eval_r5.py  eval_standard_win20.py  multihop_results.md  multihop_results_win20.md  run_ablation_no_subquery.py  run_extraction_demo.py  standard_eval_win20.md  standard_eval_win4.md  test_cometapi.py  test_gemini_15.py  test_gemini_3.py  test_hf.py  test_raw.py
scripts/: build_extension.py
tests/: test_api.py  test_base_env.py  test_civilization.py  test_code_env.py  test_conscience.py  test_crewai_integration.py  test_dna.py  test_dream.py  test_extension.py  test_healthbot_workflow.py  test_hybrid_backend.py  test_immune.py  test_integration_v1.py  test_integrations.py  test_integrations_sanity.py  test_mcp_server.py  test_new_features.py  test_npc_simulation_security.py  test_oracle.py  test_passport.py  test_premium_features.py  test_project_id.py  test_propose_revise.py  test_remote.py  test_replay.py  test_rewards.py  test_safety_env.py  test_security_data_cases.py  test_server.py  test_sleep_consolidation.py  test_sqlite_timeout.py  test_studio.py  test_timetravel.py
(+106 files in other folders)
