[project]
name = "cognicore-env"
version = "0.9.0"
description = "Cognitive RL environments with Memory, Reflection and Reward Shaping. SB3/Gymnasium compatible."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CogniCore Team"},
]
keywords = ["ai", "reinforcement-learning", "cognitive", "environments", "memory", "reflection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
rl = ["gymnasium>=1.0", "stable-baselines3>=2.0", "torch>=2.0"]
rendering = ["pygame>=2.5"]
memory = ["sentence-transformers>=2.0"]
hf = ["huggingface-hub>=0.20"]
llm = ["openai>=1.0"]
server = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "httpx>=0.27"]
all = ["cognicore-env[rl,rendering,memory,hf,llm,server,dev]"]

[project.urls]
Homepage = "https://github.com/Kaushalt2004/cognicore-my-openenv"
Documentation = "https://github.com/Kaushalt2004/cognicore-my-openenv#readme"
Repository = "https://github.com/Kaushalt2004/cognicore-my-openenv"
Issues = "https://github.com/Kaushalt2004/cognicore-my-openenv/issues"
Changelog = "https://github.com/Kaushalt2004/cognicore-my-openenv/blob/main/CHANGELOG.md"

[project.scripts]
cognicore = "cognicore.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cognicore"]

[tool.hatch.build.targets.sdist]
include = ["cognicore/", "tests/", "examples/", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
extend-ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"cognicore/dashboard.py" = ["E501"]
"cognicore/envs/data/*.py" = ["E501"]
"tests/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]