[project]
name = "cognicore-env"
version = "0.9.5"
description = "Runtime cognition layer for AI agents — memory, reflection, replay, and adaptive execution. The model stays the same. The runtime gets smarter."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CogniCore Team"},
]
keywords = ["ai", "agents", "memory", "reflection", "replay", "cognicore", "nexus", "autonomous", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
rl = ["gymnasium>=1.0", "stable-baselines3>=2.0", "torch>=2.0"]
rendering = ["pygame>=2.5"]
memory = ["sentence-transformers>=2.0", "chromadb>=0.4.0"]
hf = ["huggingface-hub>=0.20"]
llm = ["openai>=1.0", "google-genai>=0.1", "anthropic>=0.30"]
embeddings = ["sentence-transformers>=2.0", "openai>=1.0"]
server = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2.0", "PyJWT>=2.8.0"]
mcp = ["mcp[cli]>=1.0"]
langchain = ["langchain>=0.2"]
crewai = ["crewai>=0.50"]
openai-agents = ["openai-agents>=0.1"]
memory-providers = [
    "mem0ai>=2.0",
    "mempalace>=3.5",
    "zep-cloud>=3.23",
    "supermemory>=3.50",
]
extension = ["mcp[cli]>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-xdist>=3.0", "httpx>=0.27"]
all = [
    "cognicore-env[rl,rendering,memory,hf,llm,embeddings,server,mcp,langchain,crewai,openai-agents,memory-providers,extension,dev]"
]

[project.urls]
Homepage = "https://github.com/cognicore-dev/cognicore-my-openenv"
Documentation = "https://github.com/cognicore-dev/cognicore-my-openenv#readme"
Repository = "https://github.com/cognicore-dev/cognicore-my-openenv"
Issues = "https://github.com/cognicore-dev/cognicore-my-openenv/issues"
Changelog = "https://github.com/cognicore-dev/cognicore-my-openenv/blob/main/CHANGELOG.md"

[project.scripts]
cognicore = "cognicore.cli:main"
cognicore-extension = "cognicore.extension.__main__:main"
cognicore-code-setup = "cognicore.extension.code_setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cognicore"]

[tool.hatch.build.targets.sdist]
include = ["cognicore/", "tests/", "examples/", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"cognicore/dashboard.py" = ["E501"]
"cognicore/envs/data/*.py" = ["E501"]
"tests/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]